# PERSON-MANAGE

./: .gitignore  Cargo.toml  README.md  guild.md  package-lock.json  package.json  test_person.json  todo.md
.guthub/workflows/: check.yml  format-and-apply.yml
backend/: .env.example  Cargo.toml  migration.rs  run_login_migration.rs  run_migration.rs  run_permission_migration.rs  simple_migration.rs
backend/migrations/: 001_create_persons_tables.sql  001_initial_schema.sql  002_teacher_class_many_to_many.sql  003_add_login_fields_to_persons.sql  004_create_permission_tables.sql  005_add_value_to_permissions.sql
backend/src/: main.rs
backend/src/api/: ai.rs  ai_actions.rs  ai_data.rs  ai_enhanced.rs  attendance.rs  auth.rs  class.rs  debug.rs  department.rs  group.rs  mod.rs  notice.rs  permission.rs  person.rs  routes.rs  score.rs
backend/src/core/: auth.rs  config.rs  db.rs  error.rs  middleware.rs  mod.rs  password.rs  permission.rs  plugin.rs
backend/src/models/: attendance.rs  class.rs  department.rs  group.rs  mod.rs  notice.rs  person.rs  score.rs  user.rs
backend/src/plugins/: attendance_plugin.rs  mod.rs  notice_plugin.rs  score_plugin.rs
backend/src/utils/: rule_engine.rs
backend/src/ws/: handler.rs
backend/templates/permissions/: admin.yaml  manager.yaml  parent.yaml  student.yaml  teacher.yaml
docs/: AI 功能实现说明.md  AI_Markdown输出适配开发文档.md  AI权限操作功能说明.md  chat2.mjs  err.txt  homeview.md  sql.md  人员管理.md  人员管理前端开发需求.md  人员管理功能说明.md  人员管理模块详细执行计划.md  人工智能模型集成开发文档.md  小组管理开发文档.md  数据库信息文档.md  权限组管理指南.md  注意事项和错误修复指南.md  班级管理栏目bug修复报告.md  登录功能开发规划.md  系统功能检查指南.md
frontend/: .oxlintrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: ai.ts  attendance.ts  auth.ts  class.ts  department.ts  group.ts  index.ts  notice.ts  permission.ts  person.ts  score.ts  user.ts
frontend/src/components/: MarkdownRenderer.vue
frontend/src/config/: menu.ts  (+1 more)
model/樱花/: 樱花.css  樱花网址.html
(+32 files in other folders)
