[package]
name = "school-management-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = { version = "^0.7.0", features = ["ws", "macros"] }
axum-extra = { version = "^0.9.0", features = ["typed-header"] }
tokio = { version = "^1.32.0", features = ["full"] }
hyper = { version = "^1.0.0", features = ["full"] }

# 数据库
sqlx = { version = "^0.7.0", features = ["postgres", "runtime-tokio", "macros", "chrono", "uuid"] }

# 认证
jsonwebtoken = "^9.2.0"
bcrypt = "^0.15.0"
tower-http = { version = "^0.5.0", features = ["auth", "cors"] }

# WebSocket
tokio-tungstenite = "^0.21.0"

# 配置管理
dotenv = "^0.15.0"
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.107"

# 日志
tracing = "^0.1.37"
tracing-subscriber = { version = "^0.3.17", features = ["env-filter"] }

# 工具
chrono = { version = "^0.4.31", features = ["serde"] }
uuid = { version = "^1.4.0", features = ["v4", "serde"] }
anyhow = "^1.0.75"
thiserror = "^1.0.48"
serde_yaml = "^0.9.25"

# HTTP客户端
reqwest = { version = "^0.12.0", features = ["json", "stream"] }

# 正则表达式
regex = "^1.10.0"

# 插件系统
dyn-clone = "^1.0.16"

[dev-dependencies]
testcontainers = "^0.14.0"
sqlx = { version = "^0.7.0", features = ["postgres", "runtime-tokio", "macros", "chrono"] }

[features]
default = []

# 用于构建时生成数据库迁移
build = []

[[bin]]
name = "run_migration"
path = "run_migration.rs"

[[bin]]
name = "simple_migration"
path = "simple_migration.rs"

[[bin]]
name = "check_teacher_permissions"
path = "check_teacher_permissions.rs"

[[bin]]
name = "fix_teacher_permissions"
path = "fix_teacher_permissions.rs"

[[bin]]
name = "run_login_migration"
path = "run_login_migration.rs"

[[bin]]
name = "run_permission_migration"
path = "run_permission_migration.rs"

[[bin]]
name = "run_all_migrations"
path = "run_all_migrations.rs"

[[bin]]
name = "run_ai_permission_migration"
path = "run_ai_permission_migration.rs"
